--- a/package.json
+++ b/package.json
@@ -296,6 +296,6 @@
   "bugs": {
     "url": "https://github.com/leoncol/top-todo-list/issues"
   },
-  "homepage": "https://github.com/leoncol/top-todo-list#readme",
+  "homepage": "https://leoncol.github.io/top-todo-list/",
   "description": ""
 }
